--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@ body {
 }
 
 .navbar {
-    padding: 4pt;
+    padding: 3px 0px 4px 0px;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 21pt;
+    font-size: 21px;
     text-align: center;
     color: #FFFFFF;
     background-color: #474B54;
@@ -24,14 +24,14 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    line-height: 32pt;
-    border-bottom: 2pt solid #ffffff;
-    box-shadow: 0pt 0pt 4pt 4pt #474B54;
+    line-height: 32px;
+    border-bottom: 1px solid #ffffff;
+    box-shadow: 0px 0px 4px 2px #808080;
     z-index: 99;
 }
 
 .content {
-    margin-top: 40pt;
+    margin-top: 40px;
     background-color: #0E131F;
 }
 
@@ -39,11 +39,10 @@ body {
     overflow: hidden;
     position: fixed;
     width: 100%;
-    padding-top: 2pt;
     text-align: center;
     z-index: 98;
     background-color: #474B54;
-    box-shadow: 0pt 0pt 4pt 4pt #474B54;
+    box-shadow: 0px 0px 4px 2px #808080;
 }
 
 .fleet-tab button {
@@ -52,40 +51,40 @@ body {
     border: none;
     outline: none;
     cursor: pointer;
-    height: 40pt;
+    height: 40px;
     transition: 0.3s;
     width: 50%;
-    border-bottom: 2pt solid #a5a5a5;
+    border-bottom: 1px solid #a5a5a5;
     color: #a5a5a5;
   }
 
 
 .fleet-tab button:hover {
-    border-bottom: 2pt solid #ffffff;
+    border-bottom: 1px solid #ffffff;
     color: #ffffff;
 }
 
 
 .fleet-tab button.active {
-    border-bottom: 2pt solid #ffffff;
+    border-bottom: 1px solid #ffffff;
     color: #ffffff;
 }
 
 .fleet-tab-content {
     display: none;
-    padding-top: 40pt;
-    margin: 24pt 24pt 24pt 24pt;
+    padding-top: 40px;
+    margin: 24px 24px 24px 24px;
   }
 
 
 .text {
     font-family: 'Titillium Web', sans-serif;
-    font-size: 21pt;
-    line-height: 32pt;
+    font-size: 21px;
+    line-height: 32px;
 }
 
 .text-sm {
     font-family: 'Poppins', sans-serif;
-    font-size: 11pt;
-    line-height: 17pt;
+    font-size: 11px;
+    line-height: 17px;
 }
